touch event preventing stuck on swipe

--- a/src/css/modules/_cartogram.scss
+++ b/src/css/modules/_cartogram.scss
@@ -28,6 +28,7 @@
 .cartogram svg {
     background: transparent;
     display: block;
+    user-select:none;
 }
 .cartogram svg rect.bg {
     fill-opacity:0;
